syntax = "proto3";
package stocktrading;
option java_multiple_files=true;
option java_package="com.deep";
option java_outer_classname="StockTradingProto";

service StockTradingService{
  //unary rpc
  rpc getStockPrice(StockRequest) returns (StockResponse);

  //server streaming
  rpc subscribeStockPrice(StockRequest) returns (stream StockResponse);

  //client streaming
  rpc bulkStockOrder(stream StockOrder) returns (OrderSummary);

  //bidirectional streaming
  rpc liveTrading(stream StockOrder) returns (stream TradeStatus);

}

message TradeStatus{
  string order_id=1;
  string status=2;  //execute, fail, pending
  string message = 3; //result if failed or success
  string timestamp=4;
}

message OrderSummary{
  string totalOrder=1;
  double totalAmount=2;
  int32 successCount=3;
}

message StockOrder{
  string orderId=1;
  string stock_symbol=2;
  int32 quantity=3;
  double price=4;
  string order_type=5;
}

message StockResponse{
  string stock_symbol=1;
  double price=2;
  string timestamp=3;
}

message StockRequest{
  string stock_symbol=1;
}